--- a/ATMmvd/Base.lproj/Main.storyboard
+++ b/ATMmvd/Base.lproj/Main.storyboard
@@ -32,10 +32,118 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" id="9E9-bb-x6Q"/>
+                    <connections>
+                        <segue destination="SIF-Uz-ztL" kind="show" id="i25-lq-50Z"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="476" y="132.68365817091455"/>
+        </scene>
+        <!--Second View Controller-->
+        <scene sceneID="R4z-Dd-DNh">
+            <objects>
+                <viewController id="SIF-Uz-ztL" customClass="SecondViewController" customModule="ATMmvd" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="3zF-Lw-Shf">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="atm" translatesAutoresizingMaskIntoConstraints="NO" id="3XQ-AO-Y5V">
+                                <rect key="frame" x="0.0" y="0.0" width="385" height="438"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="redbrou" translatesAutoresizingMaskIntoConstraints="NO" id="6f3-L7-jt0">
+                                <rect key="frame" x="100" y="543" width="185" height="65"/>
+                            </imageView>
+                            <view alpha="0.94999999999999996" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1R8-Xm-ENw">
+                                <rect key="frame" x="0.0" y="184" width="185" height="147"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="muq-v1-2b1">
+                                        <rect key="frame" x="8" y="15" width="169" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" red="0.99628132581710815" green="0.98432749509811401" blue="0.98405665159225464" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7qB-FX-GYE">
+                                        <rect key="frame" x="8" y="76" width="169" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" red="0.99628132581710815" green="0.98432749509811401" blue="0.98405665159225464" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PaK-d5-jov">
+                                        <rect key="frame" x="8" y="106.5" width="169" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" red="0.99628132581710815" green="0.98432749509811401" blue="0.98405665159225464" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IOV-Y5-uen">
+                                        <rect key="frame" x="8" y="45.5" width="169" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" red="0.99628132581710815" green="0.98432749509811401" blue="0.98405665159225464" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="muq-v1-2b1" firstAttribute="leading" secondItem="1R8-Xm-ENw" secondAttribute="leading" constant="8" id="5dG-3X-46d"/>
+                                    <constraint firstAttribute="trailing" secondItem="7qB-FX-GYE" secondAttribute="trailing" constant="8" id="5p9-zT-inC"/>
+                                    <constraint firstAttribute="trailing" secondItem="muq-v1-2b1" secondAttribute="trailing" constant="8" id="CMI-y9-UAq"/>
+                                    <constraint firstAttribute="trailing" secondItem="PaK-d5-jov" secondAttribute="trailing" constant="8" id="CPa-TH-2gB"/>
+                                    <constraint firstItem="PaK-d5-jov" firstAttribute="top" secondItem="7qB-FX-GYE" secondAttribute="bottom" constant="10" id="HCH-Zh-ClW"/>
+                                    <constraint firstItem="PaK-d5-jov" firstAttribute="leading" secondItem="1R8-Xm-ENw" secondAttribute="leading" constant="8" id="XFL-px-G9u"/>
+                                    <constraint firstItem="IOV-Y5-uen" firstAttribute="top" secondItem="muq-v1-2b1" secondAttribute="bottom" constant="10" id="YWn-QD-3vS"/>
+                                    <constraint firstItem="IOV-Y5-uen" firstAttribute="leading" secondItem="1R8-Xm-ENw" secondAttribute="leading" constant="8" id="gqg-mX-RDn"/>
+                                    <constraint firstItem="muq-v1-2b1" firstAttribute="top" secondItem="1R8-Xm-ENw" secondAttribute="top" constant="15" id="j0K-tO-blc"/>
+                                    <constraint firstItem="7qB-FX-GYE" firstAttribute="leading" secondItem="1R8-Xm-ENw" secondAttribute="leading" constant="8" id="pV0-yD-4wo"/>
+                                    <constraint firstItem="7qB-FX-GYE" firstAttribute="top" secondItem="IOV-Y5-uen" secondAttribute="bottom" constant="10" id="pqp-7e-szW"/>
+                                    <constraint firstAttribute="trailing" secondItem="IOV-Y5-uen" secondAttribute="trailing" constant="8" id="va6-mb-FQZ"/>
+                                </constraints>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Close" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7FP-Q6-guc">
+                                <rect key="frame" x="225" y="72" width="60" height="21"/>
+                                <color key="backgroundColor" red="0.99628132581710815" green="0.98432749509811401" blue="0.98405665159225464" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="IR9-uc-v59"/>
+                                    <constraint firstAttribute="width" constant="60" id="JKJ-mU-LwC"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="7FP-Q6-guc" firstAttribute="top" secondItem="ADU-bo-lOg" secondAttribute="top" constant="8" id="0g6-GO-A2s"/>
+                            <constraint firstItem="7FP-Q6-guc" firstAttribute="leading" secondItem="ADU-bo-lOg" secondAttribute="leading" constant="225" id="24X-z5-QvA"/>
+                            <constraint firstItem="ADU-bo-lOg" firstAttribute="trailing" secondItem="1R8-Xm-ENw" secondAttribute="trailing" constant="200" id="9Si-yS-psI"/>
+                            <constraint firstItem="6f3-L7-jt0" firstAttribute="centerX" secondItem="ADU-bo-lOg" secondAttribute="centerX" id="9fF-ny-ed1"/>
+                            <constraint firstItem="3XQ-AO-Y5V" firstAttribute="top" secondItem="3zF-Lw-Shf" secondAttribute="top" id="Hf2-1m-Imh"/>
+                            <constraint firstItem="1R8-Xm-ENw" firstAttribute="leading" secondItem="ADU-bo-lOg" secondAttribute="leading" id="Ime-Ak-VTI"/>
+                            <constraint firstItem="6f3-L7-jt0" firstAttribute="top" secondItem="1R8-Xm-ENw" secondAttribute="bottom" constant="212" id="Q4c-z6-qjs"/>
+                            <constraint firstItem="ADU-bo-lOg" firstAttribute="trailing" secondItem="7FP-Q6-guc" secondAttribute="trailing" constant="100" id="VPl-qL-hab"/>
+                            <constraint firstItem="ADU-bo-lOg" firstAttribute="bottom" secondItem="6f3-L7-jt0" secondAttribute="bottom" constant="50" id="Voe-dK-NJF"/>
+                            <constraint firstItem="6f3-L7-jt0" firstAttribute="top" secondItem="7FP-Q6-guc" secondAttribute="bottom" constant="450" id="dJt-3V-mk9"/>
+                            <constraint firstItem="ADU-bo-lOg" firstAttribute="bottom" secondItem="3XQ-AO-Y5V" secondAttribute="bottom" constant="220" id="e3E-8t-H34"/>
+                            <constraint firstItem="1R8-Xm-ENw" firstAttribute="top" secondItem="ADU-bo-lOg" secondAttribute="top" constant="120" id="ei8-Jt-php"/>
+                            <constraint firstItem="3XQ-AO-Y5V" firstAttribute="leading" secondItem="ADU-bo-lOg" secondAttribute="leading" id="exg-jV-sTd"/>
+                            <constraint firstItem="6f3-L7-jt0" firstAttribute="top" secondItem="3XQ-AO-Y5V" secondAttribute="bottom" constant="105" id="je6-pC-mSr"/>
+                            <constraint firstItem="6f3-L7-jt0" firstAttribute="leading" secondItem="ADU-bo-lOg" secondAttribute="leading" constant="100" id="m8B-hT-dhy"/>
+                            <constraint firstItem="3XQ-AO-Y5V" firstAttribute="trailing" secondItem="ADU-bo-lOg" secondAttribute="trailing" id="vx4-ug-Uhu"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="ADU-bo-lOg"/>
+                    </view>
+                    <connections>
+                        <outlet property="address" destination="muq-v1-2b1" id="es5-gf-9N3"/>
+                        <outlet property="atmImage" destination="3XQ-AO-Y5V" id="nvU-c7-Q30"/>
+                        <outlet property="depositLbl" destination="PaK-d5-jov" id="nng-Xh-nzX"/>
+                        <outlet property="moneyLbl" destination="7qB-FX-GYE" id="efS-yT-WYC"/>
+                        <outlet property="networkImage" destination="6f3-L7-jt0" id="v5n-At-93J"/>
+                        <outlet property="openingHoursLbl" destination="IOV-Y5-uen" id="MRc-Is-be3"/>
+                        <outlet property="statusLbl" destination="7FP-Q6-guc" id="uno-PU-Kvd"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="TeK-F3-5tQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1304.8" y="132.68365817091455"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="U2v-fN-TRq">
@@ -56,4 +164,8 @@
             <point key="canvasLocation" x="-377" y="133"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="atm" width="403" height="320"/>
+        <image name="redbrou" width="100" height="24"/>
+    </resources>
 </document>
