--- a/ATMmvd/Base.lproj/Main.storyboard
+++ b/ATMmvd/Base.lproj/Main.storyboard
@@ -33,6 +33,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="9E9-bb-x6Q"/>
                     <connections>
+                        <outlet property="mapView" destination="ioc-rn-CIF" id="DML-Nu-aI3"/>
                         <segue destination="SIF-Uz-ztL" kind="show" identifier="goToATM" id="i25-lq-50Z"/>
                     </connections>
                 </viewController>
@@ -49,34 +50,34 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="atm" translatesAutoresizingMaskIntoConstraints="NO" id="3XQ-AO-Y5V">
-                                <rect key="frame" x="0.0" y="0.0" width="385" height="438"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="447"/>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="redbrou" translatesAutoresizingMaskIntoConstraints="NO" id="6f3-L7-jt0">
-                                <rect key="frame" x="100" y="543" width="185" height="65"/>
+                                <rect key="frame" x="100" y="552" width="175" height="65"/>
                             </imageView>
                             <view alpha="0.94999999999999996" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1R8-Xm-ENw">
-                                <rect key="frame" x="0.0" y="184" width="185" height="147"/>
+                                <rect key="frame" x="0.0" y="184" width="175" height="156"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="muq-v1-2b1">
-                                        <rect key="frame" x="8" y="15" width="169" height="20.5"/>
+                                        <rect key="frame" x="8" y="15" width="159" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" red="0.99628132581710815" green="0.98432749509811401" blue="0.98405665159225464" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7qB-FX-GYE">
-                                        <rect key="frame" x="8" y="76" width="169" height="20.5"/>
+                                        <rect key="frame" x="8" y="76" width="159" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" red="0.99628132581710815" green="0.98432749509811401" blue="0.98405665159225464" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PaK-d5-jov">
-                                        <rect key="frame" x="8" y="106.5" width="169" height="20.5"/>
+                                        <rect key="frame" x="8" y="106.5" width="159" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" red="0.99628132581710815" green="0.98432749509811401" blue="0.98405665159225464" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IOV-Y5-uen">
-                                        <rect key="frame" x="8" y="45.5" width="169" height="20.5"/>
+                                        <rect key="frame" x="8" y="45.5" width="159" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" red="0.99628132581710815" green="0.98432749509811401" blue="0.98405665159225464" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
@@ -99,7 +100,7 @@
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Close" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7FP-Q6-guc">
-                                <rect key="frame" x="225" y="72" width="60" height="21"/>
+                                <rect key="frame" x="225" y="72" width="60" height="40"/>
                                 <color key="backgroundColor" red="0.99628132581710815" green="0.98432749509811401" blue="0.98405665159225464" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="IR9-uc-v59"/>
@@ -119,9 +120,7 @@
                             <constraint firstItem="3XQ-AO-Y5V" firstAttribute="top" secondItem="3zF-Lw-Shf" secondAttribute="top" id="Hf2-1m-Imh"/>
                             <constraint firstItem="1R8-Xm-ENw" firstAttribute="leading" secondItem="ADU-bo-lOg" secondAttribute="leading" id="Ime-Ak-VTI"/>
                             <constraint firstItem="6f3-L7-jt0" firstAttribute="top" secondItem="1R8-Xm-ENw" secondAttribute="bottom" constant="212" id="Q4c-z6-qjs"/>
-                            <constraint firstItem="ADU-bo-lOg" firstAttribute="trailing" secondItem="7FP-Q6-guc" secondAttribute="trailing" constant="100" id="VPl-qL-hab"/>
                             <constraint firstItem="ADU-bo-lOg" firstAttribute="bottom" secondItem="6f3-L7-jt0" secondAttribute="bottom" constant="50" id="Voe-dK-NJF"/>
-                            <constraint firstItem="6f3-L7-jt0" firstAttribute="top" secondItem="7FP-Q6-guc" secondAttribute="bottom" constant="450" id="dJt-3V-mk9"/>
                             <constraint firstItem="ADU-bo-lOg" firstAttribute="bottom" secondItem="3XQ-AO-Y5V" secondAttribute="bottom" constant="220" id="e3E-8t-H34"/>
                             <constraint firstItem="1R8-Xm-ENw" firstAttribute="top" secondItem="ADU-bo-lOg" secondAttribute="top" constant="120" id="ei8-Jt-php"/>
                             <constraint firstItem="3XQ-AO-Y5V" firstAttribute="leading" secondItem="ADU-bo-lOg" secondAttribute="leading" id="exg-jV-sTd"/>
