--- a/ATMmvd/Base.lproj/Main.storyboard
+++ b/ATMmvd/Base.lproj/Main.storyboard
@@ -13,7 +13,7 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="ATMmvd" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="idFirstViewController" id="BYZ-38-t0r" customClass="ViewController" customModule="ATMmvd" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -44,7 +44,7 @@
         <!--Second View Controller-->
         <scene sceneID="R4z-Dd-DNh">
             <objects>
-                <viewController id="SIF-Uz-ztL" customClass="SecondViewController" customModule="ATMmvd" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="idSecondViewController" id="SIF-Uz-ztL" customClass="SecondViewController" customModule="ATMmvd" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="3zF-Lw-Shf">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -52,33 +52,33 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="atm" translatesAutoresizingMaskIntoConstraints="NO" id="3XQ-AO-Y5V">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="447"/>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="redbrou" translatesAutoresizingMaskIntoConstraints="NO" id="6f3-L7-jt0">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="6f3-L7-jt0">
                                 <rect key="frame" x="100" y="552" width="175" height="65"/>
                             </imageView>
                             <view alpha="0.94999999999999996" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1R8-Xm-ENw">
-                                <rect key="frame" x="0.0" y="184" width="175" height="156"/>
+                                <rect key="frame" x="0.0" y="184" width="125" height="128"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="muq-v1-2b1">
-                                        <rect key="frame" x="8" y="15" width="159" height="20.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <rect key="frame" x="8" y="10" width="109" height="18"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                         <color key="textColor" red="0.99628132581710815" green="0.98432749509811401" blue="0.98405665159225464" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7qB-FX-GYE">
-                                        <rect key="frame" x="8" y="76" width="159" height="20.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <rect key="frame" x="8" y="66" width="109" height="18"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                         <color key="textColor" red="0.99628132581710815" green="0.98432749509811401" blue="0.98405665159225464" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PaK-d5-jov">
-                                        <rect key="frame" x="8" y="106.5" width="159" height="20.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <rect key="frame" x="8" y="94" width="109" height="18"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                         <color key="textColor" red="0.99628132581710815" green="0.98432749509811401" blue="0.98405665159225464" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IOV-Y5-uen">
-                                        <rect key="frame" x="8" y="45.5" width="159" height="20.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <rect key="frame" x="8" y="38" width="109" height="18"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                         <color key="textColor" red="0.99628132581710815" green="0.98432749509811401" blue="0.98405665159225464" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
@@ -93,7 +93,7 @@
                                     <constraint firstItem="PaK-d5-jov" firstAttribute="leading" secondItem="1R8-Xm-ENw" secondAttribute="leading" constant="8" id="XFL-px-G9u"/>
                                     <constraint firstItem="IOV-Y5-uen" firstAttribute="top" secondItem="muq-v1-2b1" secondAttribute="bottom" constant="10" id="YWn-QD-3vS"/>
                                     <constraint firstItem="IOV-Y5-uen" firstAttribute="leading" secondItem="1R8-Xm-ENw" secondAttribute="leading" constant="8" id="gqg-mX-RDn"/>
-                                    <constraint firstItem="muq-v1-2b1" firstAttribute="top" secondItem="1R8-Xm-ENw" secondAttribute="top" constant="15" id="j0K-tO-blc"/>
+                                    <constraint firstItem="muq-v1-2b1" firstAttribute="top" secondItem="1R8-Xm-ENw" secondAttribute="top" constant="10" id="j0K-tO-blc"/>
                                     <constraint firstItem="7qB-FX-GYE" firstAttribute="leading" secondItem="1R8-Xm-ENw" secondAttribute="leading" constant="8" id="pV0-yD-4wo"/>
                                     <constraint firstItem="7qB-FX-GYE" firstAttribute="top" secondItem="IOV-Y5-uen" secondAttribute="bottom" constant="10" id="pqp-7e-szW"/>
                                     <constraint firstAttribute="trailing" secondItem="IOV-Y5-uen" secondAttribute="trailing" constant="8" id="va6-mb-FQZ"/>
@@ -106,7 +106,7 @@
                                     <constraint firstAttribute="height" constant="40" id="IR9-uc-v59"/>
                                     <constraint firstAttribute="width" constant="60" id="JKJ-mU-LwC"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -115,11 +115,11 @@
                         <constraints>
                             <constraint firstItem="7FP-Q6-guc" firstAttribute="top" secondItem="ADU-bo-lOg" secondAttribute="top" constant="8" id="0g6-GO-A2s"/>
                             <constraint firstItem="7FP-Q6-guc" firstAttribute="leading" secondItem="ADU-bo-lOg" secondAttribute="leading" constant="225" id="24X-z5-QvA"/>
-                            <constraint firstItem="ADU-bo-lOg" firstAttribute="trailing" secondItem="1R8-Xm-ENw" secondAttribute="trailing" constant="200" id="9Si-yS-psI"/>
+                            <constraint firstItem="ADU-bo-lOg" firstAttribute="trailing" secondItem="1R8-Xm-ENw" secondAttribute="trailing" constant="250" id="9Si-yS-psI"/>
                             <constraint firstItem="6f3-L7-jt0" firstAttribute="centerX" secondItem="ADU-bo-lOg" secondAttribute="centerX" id="9fF-ny-ed1"/>
                             <constraint firstItem="3XQ-AO-Y5V" firstAttribute="top" secondItem="3zF-Lw-Shf" secondAttribute="top" id="Hf2-1m-Imh"/>
                             <constraint firstItem="1R8-Xm-ENw" firstAttribute="leading" secondItem="ADU-bo-lOg" secondAttribute="leading" id="Ime-Ak-VTI"/>
-                            <constraint firstItem="6f3-L7-jt0" firstAttribute="top" secondItem="1R8-Xm-ENw" secondAttribute="bottom" constant="212" id="Q4c-z6-qjs"/>
+                            <constraint firstItem="6f3-L7-jt0" firstAttribute="top" secondItem="1R8-Xm-ENw" secondAttribute="bottom" constant="240" id="Q4c-z6-qjs"/>
                             <constraint firstItem="ADU-bo-lOg" firstAttribute="bottom" secondItem="6f3-L7-jt0" secondAttribute="bottom" constant="50" id="Voe-dK-NJF"/>
                             <constraint firstItem="ADU-bo-lOg" firstAttribute="bottom" secondItem="3XQ-AO-Y5V" secondAttribute="bottom" constant="220" id="e3E-8t-H34"/>
                             <constraint firstItem="1R8-Xm-ENw" firstAttribute="top" secondItem="ADU-bo-lOg" secondAttribute="top" constant="120" id="ei8-Jt-php"/>
@@ -165,6 +165,5 @@
     </scenes>
     <resources>
         <image name="atm" width="403" height="320"/>
-        <image name="redbrou" width="100" height="24"/>
     </resources>
 </document>
