--- a/ATMmvd/Base.lproj/Main.storyboard
+++ b/ATMmvd/Base.lproj/Main.storyboard
@@ -110,7 +110,7 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="white" translatesAutoresizingMaskIntoConstraints="NO" id="zTy-EK-c3U">
+                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="zTy-EK-c3U">
                                 <rect key="frame" x="177" y="333.5" width="20" height="20"/>
                             </activityIndicatorView>
                         </subviews>
